--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,8 @@ dependencies = [
     "pandas (>=2.2.3,<3.0.0)",
     "scikit-learn (>=1.6.1,<2.0.0)",
     "fastapi (>=0.115.8,<0.116.0)",
-    "catboost (>=1.2.7,<2.0.0)"
+    "catboost (>=1.2.7,<2.0.0)",
+    "uvicorn (>=0.34.0,<0.35.0)"
 ]
 
 
