--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,8 @@ dependencies = [
     "scikit-learn (>=1.6.1,<2.0.0)",
     "fastapi (>=0.115.8,<0.116.0)",
     "catboost (>=1.2.7,<2.0.0)",
-    "uvicorn (>=0.34.0,<0.35.0)"
+    "uvicorn (>=0.34.0,<0.35.0)",
+    "psutil (>=6.1.1,<7.0.0)"
 ]
 
 
