--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,7 +13,11 @@ dependencies = [
     "fastapi (>=0.115.8,<0.116.0)",
     "catboost (>=1.2.7,<2.0.0)",
     "uvicorn (>=0.34.0,<0.35.0)",
-    "psutil (>=6.1.1,<7.0.0)"
+    "psutil (>=6.1.1,<7.0.0)",
+    "grpcio (>=1.70.0,<2.0.0)",
+    "grpcio-tools (>=1.70.0,<2.0.0)",
+    "googleapis-common-protos (>=1.67.0,<2.0.0)",
+    "grpcio-reflection (>=1.70.0,<2.0.0)"
 ]
 
 
