--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,7 +17,8 @@ dependencies = [
     "grpcio (>=1.70.0,<2.0.0)",
     "grpcio-tools (>=1.70.0,<2.0.0)",
     "googleapis-common-protos (>=1.67.0,<2.0.0)",
-    "grpcio-reflection (>=1.70.0,<2.0.0)"
+    "grpcio-reflection (>=1.70.0,<2.0.0)",
+    "ruff (>=0.9.6,<0.10.0)"
 ]
 
 
