--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,7 +20,10 @@ dependencies = [
     "grpcio-reflection (>=1.70.0,<2.0.0)",
     "ruff (>=0.9.6,<0.10.0)",
     "streamlit (>=1.42.0,<2.0.0)",
-    "seaborn (>=0.13.2,<0.14.0)"
+    "seaborn (>=0.13.2,<0.14.0)",
+    "dvc[s3] (>=3.59.0,<4.0.0)",
+    "boto3 (>=1.36.0,<1.36.4)",
+    "python-multipart (>=0.0.20,<0.0.21)"
 ]
 
 
