--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,4 +1,5 @@
 [project]
+
 name = "ml-ops-v2"
 version = "0.1.0"
 description = ""
@@ -23,7 +24,8 @@ dependencies = [
     "seaborn (>=0.13.2,<0.14.0)",
     "dvc[s3] (>=3.59.0,<4.0.0)",
     "boto3 (>=1.36.0,<1.36.4)",
-    "python-multipart (>=0.0.20,<0.0.21)"
+    "python-multipart (>=0.0.20,<0.0.21)",
+    "mlflow (>=2.20.2,<3.0.0)"
 ]
 
 
